--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DialogUtils</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_nomal_msg">普通消息</string>
+    <string name="action_no_bottom_msg">无底部按钮</string>
+    <string name="action_login_msg">自定义框</string>
 </resources>
